Service Bot done.

--- a/ServiceBot/appsettings.Development.json
+++ b/ServiceBot/appsettings.Development.json
@@ -1,8 +1,41 @@
 {
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.SystemConsoleTheme::Literate, Serilog.Sinks.Console"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName"
+    ]
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft.Hosting.Lifetime": "Debug"
+    }
+  },
+  "Discord": {
+    "Bot": {
+      "Token": "OTMyNzgyNTc4NDgwNTk5MTAw.YeX_eA.yJ__O7ogyiwdzNhepc1hlF7hqpo",
+      "GuildId": 606598365530030112
+    }
+  },
+  "Rcon": {
+    "Zomboid": {
+      "Host": "djoobstil.online",
+      "Port": 27015,
+      "Password": "sY3ALf6AmTTGFs"
     }
   }
 }
