--- a/ServiceBot/appsettings.json
+++ b/ServiceBot/appsettings.json
@@ -1,19 +1,41 @@
 {
   "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
     "WriteTo": [
-      //{
-      //  "Name": "File",
-      //  "Args": {
-      //    "path": "log_.txt",
-      //    "rollingInterval": "Week"
-      //  }
-      //},
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.SystemConsoleTheme::Literate, Serilog.Sinks.Console"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName"
     ]
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "Discord": {
+    "Bot": {
+      "Token": "OTMyNzgyNTc4NDgwNTk5MTAw.YeX_eA.yJ__O7ogyiwdzNhepc1hlF7hqpo",
+      "GuildId": 606598365530030112
+    }
+  },
+  "Rcon": {
+    "Zomboid": {
+      "Host": "djoobstil.online",
+      "Port": 27015,
+      "Password": "sY3ALf6AmTTGFs"
     }
   }
 }
