--- a/Angular/ClientApp/angular.json
+++ b/Angular/ClientApp/angular.json
@@ -80,11 +80,13 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Angular:build"
+            "browserTarget": "Angular:build",
+            "proxyConfig": "proxy.conf.js"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Angular:build:production"
+              "browserTarget": "Angular:build:production",
+              "proxyConfig": "proxy.conf.js"
             },
             "development": {
               "browserTarget": "Angular:build:development",
