--- a/Angular/ClientApp/package.json
+++ b/Angular/ClientApp/package.json
@@ -30,17 +30,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.5",
-    "@angular/cdk": "^11.2.4",
-    "@angular/common": "^11.2.5",
-    "@angular/compiler": "^11.2.5",
-    "@angular/core": "^11.2.5",
-    "@angular/forms": "^11.2.5",
-    "@angular/localize": "^11.2.5",
-    "@angular/platform-browser": "^11.2.5",
-    "@angular/platform-browser-dynamic": "^11.2.5",
-    "@angular/platform-server": "^11.2.5",
-    "@angular/router": "^11.2.5",
+    "@angular/animations": "11.2.5",
+    "@angular/cdk": "11.2.4",
+    "@angular/common": "11.2.5",
+    "@angular/compiler": "11.2.5",
+    "@angular/core": "11.2.5",
+    "@angular/forms": "11.2.5",
+    "@angular/localize": "11.2.5",
+    "@angular/platform-browser": "11.2.5",
+    "@angular/platform-browser-dynamic": "11.2.5",
+    "@angular/platform-server": "11.2.5",
+    "@angular/router": "11.2.5",
     "bootstrap": "^5.1.0",
     "jquery": "^3.5.1",
     "oidc-client": "^1.11.5",
@@ -67,10 +67,10 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.4",
-    "@angular/cli": "^11.2.4",
-    "@angular/compiler-cli": "^11.2.5",
-    "@angular/language-service": "^11.2.5",
+    "@angular-devkit/build-angular": "0.1102.4",
+    "@angular/cli": "11.2.4",
+    "@angular/compiler-cli": "11.2.5",
+    "@angular/language-service": "11.2.5",
     "@types/jasmine": "^3.6.6",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.33",
